test/invalidImports/service.ts
export const a = 100;
export class ClassX {}
